# EcoNet-CEIM-PhoenixWater

./: CMakeLists.txt  README.md
data/: PhoenixTimeseries2024-2026.csv
include/ceim/: ceim_core.hpp  contaminant.hpp  node.hpp  qpudata.hpp  timeseries.hpp
qpudatashards/particles/: ArizonaGilaLakePleasantWaterQuality2024-2026v1.csv  CyberPurifyCPVM_EcoNetPhoenix2026v1.csv
src/: ceim_core.cpp  cpvm_econet_linker_phx2026.rs  main_cli.cpp  qpudata_csv.cpp
tests/: CMakeLists.txt  test_ceim_core.cpp
